@@ -7,7 +7,7 @@
 
 package com.powsybl.openrao.virtualhubs.xml;
 
-import com.powsybl.openrao.virtualhubs.InternalHvdc;
+import com.powsybl.openrao.virtualhubs.HvdcPole;
 import com.powsybl.openrao.virtualhubs.VirtualHubsConfiguration;
 import jakarta.xml.bind.JAXBException;
 import org.assertj.core.api.Assertions;
@@ -16,6 +16,7 @@ import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.util.List;
 
 /**
  * @author Sebastien Murgey {@literal <sebastien.murgey at rte-france.com>}
@@ -37,30 +38,33 @@ class XmlVirtualHubsConfigurationImporterTest {
         Assertions.assertThat(configuration.getMarketAreas()).hasSize(3);
         Assertions.assertThat(configuration.getVirtualHubs()).hasSize(4);
         Assertions.assertThat(configuration.getBorderDirections()).hasSize(4);
-        Assertions.assertThat(configuration.getInternalHvdcs()).hasSize(2);
+        Assertions.assertThat(configuration.getInternalHvdcs()).hasSize(1);
 
-        final InternalHvdc internalHvdc1 = configuration.getInternalHvdcs().get(0);
-        final InternalHvdc internalHvdc2 = configuration.getInternalHvdcs().get(1);
+        final List<HvdcPole> poles = configuration.getInternalHvdcs().getFirst().poles();
+        Assertions.assertThat(poles).hasSize(2);
+
+        final HvdcPole pole1 = poles.getFirst();
+        final HvdcPole pole2 = poles.getLast();
         SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(internalHvdc1.converters()).hasSize(2);
-        softly.assertThat(internalHvdc1.converters().get(0).node()).isEqualTo("AAAAA11A");
-        softly.assertThat(internalHvdc1.converters().get(0).station()).isEqualTo("Station 1");
-        softly.assertThat(internalHvdc1.converters().get(1).node()).isEqualTo("BBBBB11B");
-        softly.assertThat(internalHvdc1.converters().get(1).station()).isEqualTo("Station 2");
-        softly.assertThat(internalHvdc1.lines()).hasSize(1);
-        softly.assertThat(internalHvdc1.lines().getFirst().from()).isEqualTo("AAAAA11A");
-        softly.assertThat(internalHvdc1.lines().getFirst().to()).isEqualTo("BBBBB11B");
+        softly.assertThat(pole1.converters()).hasSize(2);
+        softly.assertThat(pole1.converters().get(0).node()).isEqualTo("AAAAA11A");
+        softly.assertThat(pole1.converters().get(0).station()).isEqualTo("Station 1");
+        softly.assertThat(pole1.converters().get(1).node()).isEqualTo("BBBBB11B");
+        softly.assertThat(pole1.converters().get(1).station()).isEqualTo("Station 2");
+        softly.assertThat(pole1.lines()).hasSize(1);
+        softly.assertThat(pole1.lines().getFirst().from()).isEqualTo("AAAAA11A");
+        softly.assertThat(pole1.lines().getFirst().to()).isEqualTo("BBBBB11B");
         softly.assertAll();
 
         softly = new SoftAssertions();
-        softly.assertThat(internalHvdc2.converters()).hasSize(2);
-        softly.assertThat(internalHvdc2.converters().get(0).node()).isEqualTo("AAAAA21A");
-        softly.assertThat(internalHvdc2.converters().get(0).station()).isEqualTo("Station 1");
-        softly.assertThat(internalHvdc2.converters().get(1).node()).isEqualTo("BBBBB21B");
-        softly.assertThat(internalHvdc2.converters().get(1).station()).isEqualTo("Station 2");
-        softly.assertThat(internalHvdc2.lines()).hasSize(1);
-        softly.assertThat(internalHvdc2.lines().getFirst().from()).isEqualTo("AAAAA21A");
-        softly.assertThat(internalHvdc2.lines().getFirst().to()).isEqualTo("BBBBB21B");
+        softly.assertThat(pole2.converters()).hasSize(2);
+        softly.assertThat(pole2.converters().get(0).node()).isEqualTo("AAAAA21A");
+        softly.assertThat(pole2.converters().get(0).station()).isEqualTo("Station 1");
+        softly.assertThat(pole2.converters().get(1).node()).isEqualTo("BBBBB21B");
+        softly.assertThat(pole2.converters().get(1).station()).isEqualTo("Station 2");
+        softly.assertThat(pole2.lines()).hasSize(1);
+        softly.assertThat(pole2.lines().getFirst().from()).isEqualTo("AAAAA21A");
+        softly.assertThat(pole2.lines().getFirst().to()).isEqualTo("BBBBB21B");
         softly.assertAll();
     }
 
